issue 96 - prevent nav links from wrapping. Fix suggested by Lindsey Simon!
git-svn-id: http://httparchive.googlecode.com/svn/trunk@419 fc7d47d3-c008-acd5-f51f-d19787b8a02f

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ header {
 	background: #eaeaea;
 	border-bottom: 4px dashed #fff;
 	width: 100%;
+	min-width: 1200px;
 	padding: 25px 0 0 0; }
 #logo {
 	font-size: 2.875em;
